Intermediate state including a wip jena PR